src/objects/Enhancement_Request__c.object
<CustomObject>
    <fields>
        <fullName>Application_Description__c</fullName>
        <label>Application Description</label>
        <picklist>
            <controllingField>Application_Name__c</controllingField>
            <picklistValues>
                <fullName>ART: Account Request Tool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS: Critical Shortages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCAR: Material Corrective Action Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NQT: Network Quote management Tool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QIRS: Quality Issue Resolution System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAT: Self Audit Tool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UTD - Data Submission Tool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALL - All Applications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality Improvement Projects Portfolio</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Application_Name__c</fullName>
        <inlineHelpText>Please select an Application for this enhancement request.</inlineHelpText>
        <label>Application Name</label>
        <picklist>
            <picklistValues>
                <fullName>ALL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ART</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NQT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QIPP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QIRS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UTD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Create_Date__c</fullName>
        <label>Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Criticality__c</fullName>
        <label>Criticality</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Owner_Email__c</fullName>
        <description>Email for the current owner</description>
        <label>Current Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DeMaStatus__c</fullName>
        <label>DeMaStatus</label>
        <picklist>
            <picklistValues>
                <fullName>Requested</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAD provide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estimation Provided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Request Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Detailed_Description__c</fullName>
        <label>Detailed Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Enhancement__c</fullName>
        <inlineHelpText>Please enter a short description for this enhancement request.</inlineHelpText>
        <label>Enhancement (Brief Description)</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Estimation__c</fullName>
        <label>Estimation</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Date__c</fullName>
        <description>Date - this particular enhancement request has been implemented</description>
        <inlineHelpText>If this enhancement request is Complete, enter a Date - this particular enhancement request has been implemented.</inlineHelpText>
        <label>Implementation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LOE__c</fullName>
        <description>Level of Effort (LOE) - High-level Estimate</description>
        <inlineHelpText>Please enter your best guess on the Level of Effort - (High-level Estimate)</inlineHelpText>
        <label>LOE</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes_Activity__c</fullName>
        <label>Notes / Activity</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Overall_Priority__c</fullName>
        <label>Overall Priority</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <description>Person / Group responsible for this enhancement request</description>
        <inlineHelpText>Please enter a Name / Group responsible for this enhancement request</inlineHelpText>
        <label>Current Owner</label>
        <picklist>
            <picklistValues>
                <fullName>L2 Queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L3 Queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SNOW</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Vijay G.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chandra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chetan Nawale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunanda Budati</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Princy Ch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rajkumar R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vivek Singh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shantanu P</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <inlineHelpText>Please enter the name of the person requesting this enhancement</inlineHelpText>
        <label>Requested By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>Date - this enhancement request came from Business</description>
        <inlineHelpText>Please enter the date this request is / was received</inlineHelpText>
        <label>Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Collection</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Qualify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluation and Closure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Completion_Date__c</fullName>
        <label>Target Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ticket__c</fullName>
        <description>Ticket# from the NSN Ticketing System</description>
        <inlineHelpText>Please enter the Ticket# from the NSN Ticketing System</inlineHelpText>
        <label>Ticket#</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Enhancement Request</label>
    <listViews>
        <fullName>Active</fullName>
        <columns>NAME</columns>
        <columns>Overall_Priority__c</columns>
        <columns>Enhancement__c</columns>
        <columns>Application_Name__c</columns>
        <columns>Criticality__c</columns>
        <columns>Status__c</columns>
        <columns>Owner__c</columns>
        <columns>Ticket__c</columns>
        <columns>Implementation_Date__c</columns>
        <columns>LOE__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Canceled</value>
        </filters>
        <label>Active</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Overall_Priority__c</columns>
        <columns>Enhancement__c</columns>
        <columns>Application_Name__c</columns>
        <columns>Criticality__c</columns>
        <columns>Status__c</columns>
        <columns>Owner__c</columns>
        <columns>Ticket__c</columns>
        <columns>Implementation_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Assigned</fullName>
        <columns>NAME</columns>
        <columns>Overall_Priority__c</columns>
        <columns>Enhancement__c</columns>
        <columns>Status__c</columns>
        <columns>Application_Name__c</columns>
        <columns>Requested_Date__c</columns>
        <columns>Criticality__c</columns>
        <columns>Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Work in Progress,Waiting in Queue</value>
        </filters>
        <filters>
            <field>Owner__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Assigned</label>
    </listViews>
    <listViews>
        <fullName>Canceled</fullName>
        <columns>NAME</columns>
        <columns>Enhancement__c</columns>
        <columns>Application_Name__c</columns>
        <columns>Criticality__c</columns>
        <columns>Owner__c</columns>
        <columns>Ticket__c</columns>
        <columns>Implementation_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Canceled</value>
        </filters>
        <label>Canceled</label>
    </listViews>
    <listViews>
        <fullName>Closed</fullName>
        <columns>NAME</columns>
        <columns>Enhancement__c</columns>
        <columns>Application_Name__c</columns>
        <columns>Criticality__c</columns>
        <columns>Owner__c</columns>
        <columns>Ticket__c</columns>
        <columns>Implementation_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>Closed</label>
    </listViews>
    <nameField>
        <displayFormat>ER-{000}</displayFormat>
        <label>Enhancement Request #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enhancement Request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>